# speech-recog

./: Dockerfile  README.md  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.ts
src/: app.py  index.py  speech-recog.py
